--- a/CarrierConstruct.Blazor/wwwroot/css/app.css
+++ b/CarrierConstruct.Blazor/wwwroot/css/app.css
@@ -9,20 +9,23 @@
    --page-background: #f9f9f9;*/
 }
 
-html, page {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #1B2737;
-  color: #AAC5BA;
-  /*font-family: 'Major Mono Display', serif;*/
-  font-family: "Inconsolata", serif;
+.cc-h1 {
+  font-family: "Major Mono Display", serif;
+  font-size: 36px;
+  font-weight: 800;
 }
 
-.cc-flight-deck-map-outside {
+.cc-h2 {
+  font-family: "Major Mono Display", serif;
+  font-size: 24px;
+}
+
+.cc-text-small {
+  font-size: 12px;
+  color: #5B8674;
+}
+
+.cc-flight-deck-outline-outer {
   position: relative;
   height: 500px;
   width: 1000px;
@@ -31,7 +34,7 @@ html, page {
   background: #AAC5BA;
 }
 
-.cc-flight-deck-map-inside {
+.cc-flight-deck-outline-inner {
   position: absolute;
   top: 5px;
   left: 5px;
@@ -42,12 +45,100 @@ html, page {
   background-color: #1B2737;
 }
 
-.cc-page-container {
+.cc-flight-deck-parking {
+  position: absolute;
+  border: 2px solid green;
+  display: flex;
+}
+.cc-flight-deck-parking.section-1 {
+  left: 15px;
+  width: 100px;
+  height: 80px;
+  bottom: 100px;
+}
+.cc-flight-deck-parking.section-2 {
+  left: 430px;
+  width: 55px;
+  height: 80px;
+  bottom: 100px;
+}
+
+.cc-flight-deck-elevator {
+  position: absolute;
+  border: 2px solid red;
+}
+.cc-flight-deck-elevator.elevator-1 {
+  left: 490px;
+  width: 100px;
+  height: 80px;
+  bottom: 100px;
+}
+.cc-flight-deck-elevator.elevator-2 {
+  left: 325px;
+  width: 100px;
+  height: 80px;
+  bottom: 100px;
+}
+.cc-flight-deck-elevator.elevator-3 {
+  left: 120px;
+  width: 100px;
+  height: 80px;
+  bottom: 100px;
+}
+html {
+  height: 100%;
+  background-color: #1B2737;
+  color: #AAC5BA;
+  font-family: "Inconsolata", serif;
+  border: 1px solid red;
+}
+
+body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  border: 1px solid pink;
+}
+
+.cc-page-wrapper {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid green;
+}
+
+.cc-air-ops-page-wrapper {
+  display: flex;
+  /*justify-content: space-between;*/
+  /*max-width: 2000px;*/
+  border: 2px solid yellow;
+}
+
+.cc-air-ops-content {
   display: flex;
   flex-direction: column;
-  max-width: 2000px;
-  /*justify-content: center;*/
+  justify-content: center;
   align-items: center;
+  max-width: 2000px;
+  padding: 16px;
+  border: 2px solid red;
+}
+
+.cc-air-ops-sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 2px solid #AAC5BA;
+  width: 300px;
+}
+.cc-air-ops-sidebar div {
+  flex: auto;
+  padding: 8px;
+  border: 2px solid purple;
+  /*height: auto;*/
 }
 
 .cc-aircraft-container {
@@ -116,22 +207,6 @@ html, page {
   min-width: 500px;
   max-width: 2000px;
   border-top: 2px dashed #AAC5BA;
-}
-
-.cc-h1 {
-  font-family: "Major Mono Display", serif;
-  font-size: 36px;
-  font-weight: 800;
-}
-
-.cc-h2 {
-  font-family: "Major Mono Display", serif;
-  font-size: 24px;
-}
-
-.cc-text-small {
-  font-size: 12px;
-  color: #5B8674;
 }
 
 .cc-lr-box {
