--- a/CarrierConstruct.Blazor/Components/HangarComponent.razor
+++ b/CarrierConstruct.Blazor/Components/HangarComponent.razor
@@ -9,8 +9,9 @@
 <div class="cc-aircraft-container">
     @foreach (var aircraft in AircraftInHangar)
     {
-        <AircraftCardComponent Aircraft="aircraft" 
-                               OnAircraftCardClicked="(args) => SelectAircraft(args, aircraft)" 
+        <AircraftChipComponent Aircraft="aircraft" 
+                               OnAircraftChipClicked="(args) => SelectAircraft(args, aircraft)" 
+                               OnAircraftChipHover="(args) => DisplayAircraftInformation(args, aircraft)" 
                                ClickDisabled="orderInProgress"
                                IsSelected="selectedAircraft.Contains(aircraft)"/>
     }
